--- a/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
+++ b/CancherksWebApp/Pages/Admin/AgregarInstalacion.cshtml
@@ -67,7 +67,24 @@
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -79,7 +96,24 @@
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -91,55 +125,140 @@
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                             Jueves
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsefive" aria-expanded="false" aria-controls="collapseThree">
                             Viernes
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div id="collapsefive" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
                             Sábado
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingThree">
-                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseThree">
                             Domingo
                         </button>
                     </h2>
-                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                    <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                            <label class="form-check-label label-bold"> Inicio</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">7:00 am </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">8:00 am</label>
+                            </div>
+                            <label class="form-check-label label-bold"> Final</label>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeeklyStart" value="option1">
+                                <label class="form-check-label" for="inlineCheckbox1">11:00 pm </label>
+                            </div>
+                            <div class="form-check form-check-inline">
+                                <input class="form-check-input" type="checkbox" id="WeekendsStart" value="option2">
+                                <label class="form-check-label" for="inlineCheckbox2">3:00 pm</label>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -148,4 +267,8 @@
     </div>
 
 </section>
+
+
+
+
 
